crates/ridge-parser/tests/fixtures/errors/p020_reserved_keyword_in_let_pattern.ridge
-- expect: P020
-- Trigger: `init` is a reserved keyword and cannot bind in a let pattern.
pub fn entry () -> Int =
    let init = 10
    init + 1
